# sheldon_aidl

./: gradle.properties  settings.gradle
app/: build.gradle
app/libs/: remoteservicecontract-debug.aar
app/src/androidTest/java/com/example/administrator/sheldon_aidl/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/com/example/administrator/sheldon_aidl/: MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/example/administrator/sheldon_aidl/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
remoteserver/: CMakeLists.txt  build.gradle
remoteserver/release/: myserver-release.apk  output.json
remoteserver/src/androidTest/java/com/example/remoteserver/: ExampleInstrumentedTest.java
remoteserver/src/main/: AndroidManifest.xml
remoteserver/src/main/java/com/example/remoteserver/: BluetoothLeService.java  RemoteService.java  SampleGattAttributes.java
remoteserver/src/main/jni/: RemoteServiceJNI.c
remoteserver/src/main/jni/include/: com_example_remoteserver_RemoteService.h  com_example_remoteserver_RemoteService.h-bytebuffer
remoteserver/src/main/res/values/: strings.xml
remoteservicecontract/: build.gradle
remoteservicecontract/src/main/: AndroidManifest.xml
remoteservicecontract/src/main/aidl/com/example/remoteserver/: Entity.aidl  IRemoteService.aidl  ITVCallback.aidl
remoteservicecontract/src/main/java/com/example/remoteserver/: Entity.java
remoteservicecontract/src/main/res/layout/: activity_entity.xml
